--- a/exercicios/desafio 012/estilo/style.css
+++ b/exercicios/desafio 012/estilo/style.css
@@ -1,14 +1,25 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
     min-height: 100vh;
     background-color: darkgray;
-
+    font-family: var(--fonte1);
 }
 
 header {
@@ -20,6 +31,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: min(9vw, 5em);
 }
 
 header > p {
@@ -41,6 +54,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: min(5vw, 1.8em);
 }
 
 section.normal{
@@ -55,7 +70,8 @@ section.imagem{
 
 section.imagem > p{
     background-color: rgb(40, 40, 40);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer {
