--- a/exercicios/desafio 012/estilo/style.css
+++ b/exercicios/desafio 012/estilo/style.css
@@ -32,7 +32,7 @@ header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--fonte2);
-    font-size: min(9vw, 5em);
+    font-size: min(10vw, 5em);
 }
 
 header > p {
@@ -66,12 +66,31 @@ section.normal{
 section.imagem{
     background-color: rgb(58, 57, 57);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.429);
+    background-attachment: fixed;
 }
 
 section.imagem > p{
-    background-color: rgb(40, 40, 40);
+    background-color: rgb(0, 0, 0, 0.5);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 2px 0px black;
+}
+
+section > p{
+    padding-bottom: 2em;
+}
+
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+    background-size: cover;
 }
 
 footer {
